syntax = "proto3";
package model;

message TestModel {
  string msg = 1;
}
